# network-config-checker

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  action.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  config-compliance.yml  release.yml
config_samples/: README.md  noncompliant_config.txt  sample_config.txt
configs/: README.md  inventory.csv
configs/lab/: core-sw-01.cfg
configs/production/: edge-sw-01.cfg
docs/: COMPATIBILITY.md  POLICY_AUTHORING.md  POLICY_MIGRATION.md  RELEASE.md  SCOPE.md  SECURITY.md  TUTORIALS.md
policies/: README.md  security_policies.yaml
policies/builtin/: cisco_ios_baseline.yaml  cisco_ios_management_hardening.yaml
policies/schema/: policy.schema.json
reports/: compliance_report.json  compliance_report.txt
src/: compliance_checker.py  live_monitor.py  main.py  notifier.py  parser.py  report_generator.py  test_script.py
src/network_config_checker/: __init__.py  __main__.py  cli.py  compliance.py  conditions.py  exit_codes.py  junit_xml.py  limits.py  live.py  logging_config.py  models.py  notifier.py  parser.py  policy.py  reports.py  sarif.py  scanner.py  vendor.py
tests/: conftest.py  test_cli.py  test_compliance.py  test_compliance_checker.py  test_conditions.py  test_configs_fleet.py  test_limits.py  test_live_notifier.py  test_parser.py  test_policy.py  test_reports.py  test_sample_configs.py  test_schema.py  test_vendor.py
