[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-config-checker"
version = "2.1.0"
description = "Offline compliance scanner for network configs in Git"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Olúmáyòwá Akinkuehinmi", email = "akintunero101@gmail.com" },
]
maintainers = [
    { name = "Olúmáyòwá Akinkuehinmi", email = "akintunero101@gmail.com" },
]
keywords = ["network", "security", "compliance", "cisco", "configuration", "audit", "gitops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Security",
]
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.2",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
live = [
    "netmiko>=4.4.0",
    "schedule>=1.2.0",
]
notify = [
    "requests>=2.32.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
    "pip-audit>=2.7.0",
    "build>=1.2.0",
    "types-requests>=2.32.0",
]
all = [
    "network-config-checker[live,notify,dev]",
]

[project.urls]
Homepage = "https://github.com/akintunero/network-config-checker"
Documentation = "https://github.com/akintunero/network-config-checker#readme"
Repository = "https://github.com/akintunero/network-config-checker.git"
"Bug Tracker" = "https://github.com/akintunero/network-config-checker/issues"

[project.scripts]
network-config-checker = "network_config_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
network_config_checker = ["py.typed"]

[tool.setuptools.data-files]
"network-config-checker/policies/builtin" = ["policies/builtin/*.yaml"]
"network-config-checker/schema" = ["policies/schema/policy.schema.json"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
mypy_path = ["src"]
packages = ["network_config_checker"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[tool.coverage.run]
source = ["src/network_config_checker"]

[tool.coverage.report]
omit = ["*/tests/*"]

[tool.bandit]
exclude_dirs = ["tests"]
